<resources>
    <string name="app_name">Star Trek The Game</string>
    <string name="score">Hajs:</string>
    <string name="start_text">Pacnij by zacząć</string>
    <string name="fontColor">#60ff00</string>
    <string name="game_over">koniec gry</string>
    <string name="high_score">Rekord:</string>
    <string name="again">Jeszcze!</string>
    <string name="orange_points">na wódkę w klubie (10 pkt)</string>
    <string name="pink_points">na najlepszy striptiz (30 pkt)</string>
    <string name="start">Graj!</string>
    <string name="exit">A zamkniesz ty się?</string>
    <string name="goodbye">Leszcz!</string>
    <string name="the_game">The Game</string>
    <string name="death">budzisz się martwy w przestrzeni kosmicznej</string>
    <string name="blue">troszeczkę spokojniej</string>
    <string name="cash">Hajs:</string>
    <string name="shop_title">The Ship Shop</string>
    <string name="sample_text">sample text</string>
    <string name="owned">masz już</string>
    <string name="affordable">kup!</string>
    <string name="unaffordable">nie stać cię</string>
    <string name="ship1">Bonaventure</string>
    <string name="ship2">Constitution</string>
    <string name="ship3">Heavy Shuttle</string>
    <string name="ship4">Copernicus</string>
    <string name="ship5">Tubular shuttle</string>
    <string name="ship6">Surprise</string>
    <string name="ship_def_name">\u003Chidden\u003E</string>
    <string name="pick">Wybierz statek</string>

</resources>
