<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_title"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="15dp"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/ship1"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/box" />

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/ship2"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/box" />

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/ship3"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/box" />

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/ship4"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/box" />

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/ship5"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/box" />

                <TextView
                    android:id="@+id/title5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/ship6"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/box" />

                <TextView
                    android:id="@+id/title6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>

    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:text="@string/cash"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>


</LinearLayout>